--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="placeholder_text">"Number of Words in Default Puzzle: "</string>
     <string name="clue_header_across">Across</string>
     <string name="clue_header_down">Down</string>
+    <string name="dialog_title">Guess word</string>
+    <string name="dialog_message">Enter your guess for box %1$d!</string>
 </resources>
